...
          duration: const Duration(milliseconds: 500),
          builder: (context, waist, _) {
            return SizedBox(
              height: 240,
              width: double.infinity,
              child: CustomPaint(
                key: const Key('projection_avatar'),
                painter: ProjectionAvatarPainter(
                  shoulderFactor: shoulder,
                  waistFactor: waist,
                ),
              ),
            );
...
